[package]
name = "git-glob"
version = "0.3.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A WIP crate of the gitoxide project dealing with pattern matching"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "bstr/serde1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = { version = "0.2.13", default-features = false, features = ["std"]}
bitflags = "1.3.2"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
git-testtools = { path = "../tests/tools"}

[package.metadata.docs.rs]
features = ["document-features"]
all-features = true
