[package]
name = "git-hash"
version = "0.3.0"
description = "Borrowed and owned git hash digests used to identify git objects"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
edition = "2018"
include = ["src/**/*"]

[lib]
doctest = false

[features]
serde1 = ["serde", "bstr/serde1"]

[dependencies]
quick-error = "2.0.0"
hex = "0.4.2"
bstr = { version = "0.2.13", default-features = false, features = ["std"] }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
