[package]
name = "git-hash"
version = "0.10.1"
description = "Borrowed and owned git hash digests used to identify git objects"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
edition = "2021"
include = ["src/**/*", "CHANGELOG.md"]

[lib]
doctest = false
test = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde"]

[dependencies]
thiserror = "1.0.33"
hex = "0.4.2"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
git-testtools = { path = "../tests/tools"}

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
rustdoc-args = ["--cfg", "docsrs"]
