[package]
name = "git-index"
version = "0.2.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A work-in-progress crate of the gitoxide project dedicated implementing the git index file"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[lib]
doctest = false
test = true

[[test]]
name = "multi-threaded"
path = "tests/index-multi-threaded.rs"
required-features = ["internal-testing-git-features-parallel"]

[[test]]
name = "single-threaded"
path = "tests/index-single-threaded.rs"
required-features = ["internal-testing-to-avoid-being-run-by-cargo-test-all"]

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "smallvec/serde", "git-hash/serde1"]

internal-testing-git-features-parallel = ["git-features/parallel"]
internal-testing-to-avoid-being-run-by-cargo-test-all = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-features = { version = "^0.20.0", path = "../git-features", features = ["rustsha1", "progress"] }
git-hash = { version = "^0.9.3", path = "../git-hash" }
git-bitmap = { version = "^0.1.0", path = "../git-bitmap" }
git-object = { version = "^0.18.0", path = "../git-object" }

quick-error = "2.0.0"
memmap2 = "0.5.0"
filetime = "0.2.15"
bstr = { version = "0.2.13", default-features = false }

serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
smallvec = "1.7.0"
atoi = "1.0.0"
bitflags = "1.3.2"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
git-testtools = { path = "../tests/tools"}

[package.metadata.docs.rs]
features = ["document-features", "serde1"]

