[package]
name = "git-lfs"
version = "0.0.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "Please use `gix-<thiscrate>` instead ('git' -> 'gix')"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.64"

[lib]
doctest = false

[dependencies]
