[package]
name = "git-lock"
version = "0.2.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A git-style lock-file implementation"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
include = ["src/**/*"]

[lib]
doctest = false
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.5.0"
git-tempfile = { version = "^0.6.0", path = "../git-tempfile" }
quick-error = "2.0.0"

[dev-dependencies]
tempfile = "3.2.0"
