[package]
name = "git-mailmap"
version = "0.7.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A WIP crate of the gitoxide project for parsing mailmap files"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"

[lib]
doctest = false

[features]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "bstr/serde", "git-actor/serde1"]

[dependencies]
git-actor = { version = "^0.15.0", path = "../git-actor" }
bstr = { version = "1.0.1", default-features = false, features = ["std", "unicode"]}
quick-error = "2.0.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
git-testtools = { path = "../tests/tools"}

[package.metadata.docs.rs]
all-features = true
features = ["document-features"]
rustdoc-args = ["--cfg", "docsrs"]
