[package]
name = "git-object"
version = "0.10.0"
description = "Immutable and mutable git objects with decoding and encoding support"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
edition = "2018"
include = ["src/**/*"]

[lib]
doctest = false

[features]
serde1 = ["serde", "bstr/serde1", "smallvec/serde", "git-hash/serde1"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
git-hash = { version = "^0.3.0", path = "../git-hash" }
git-validate = { version = "^0.1.0", path = "../git-validate" }

quick-error = "2.0.0"
hex = "0.4.2"
btoi = "0.4.2"
bstr = { version = "0.2.13", default-features = false, features = ["std"] }
nom = { version = "6", default-features = false, features = ["alloc"]}
smallvec = "1.4.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}
itoa = "0.4.6"

[dev-dependencies]
pretty_assertions = "0.7.1"
git-testtools = { version = "0.1", path = "../tests/tools"}
