[package]
name = "git-odb"
version = "0.27.0"
repository = "https://github.com/Byron/gitoxide"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT/Apache-2.0"
description = "Implements various git object databases"
edition = "2018"
include = ["src/**/*", "CHANGELOG.md"]

[lib]
doctest = false

[features]
internal-testing-git-features-parallel = ["git-features/parallel"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "git-hash/serde1", "git-object/serde1", "git-pack/serde1" ]

[[test]]
name = "multi-threaded"
path = "tests/odb-multi-threaded.rs"
required-features = ["internal-testing-git-features-parallel"]

[[test]]
name = "single-threaded"
path = "tests/odb-single-threaded.rs"
required-features = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
git-features = { version = "^0.20.0", path = "../git-features", features = ["rustsha1", "walkdir", "zlib", "crc32", "bstr"] }
git-hash = { version = "^0.9.3", path = "../git-hash" }
git-quote = { version = "^0.1.0", path = "../git-quote" }
git-object = { version = "^0.18.0", path = "../git-object" }
git-pack = { version = "^0.17.0", path = "../git-pack" }
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"]}

tempfile = "3.1.0"
thiserror = "1.0.26"
parking_lot = { version = "0.12.0" }
arc-swap = "1.5.0"

[dev-dependencies]
git-testtools = { path = "../tests/tools"}
git-actor = { path = "../git-actor" }
pretty_assertions = "1.0.0"
filetime = "0.2.15"
