[package]
name = "git-pack"
version = "0.16.0"
repository = "https://github.com/Byron/gitoxide"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT/Apache-2.0"
description = "Implements git packs and related data structures"
edition = "2018"
include = ["src/**/*", "CHANGELOG.md"]

[lib]
doctest = false

[features]
pack-cache-lru-static = ["uluru"]
pack-cache-lru-dynamic = ["clru"]
object-cache-dynamic = ["clru"]
serde1 = ["serde", "git-object/serde1"]
internal-testing-git-features-parallel = ["git-features/parallel"]
internal-testing-to-avoid-being-run-by-cargo-test-all = []

[[test]]
name = "multi-threaded"
path = "tests/pack-multi-threaded.rs"
required-features = ["internal-testing-git-features-parallel"]

[[test]]
name = "single-threaded"
path = "tests/pack-single-threaded.rs"
required-features = ["internal-testing-to-avoid-being-run-by-cargo-test-all"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
git-features = { version = "^0.19.0", path = "../git-features", features = ["crc32", "rustsha1", "progress", "zlib"] }
git-hash = { version = "^0.9.0", path = "../git-hash" }
git-chunk = { version ="^0.2.0", path = "../git-chunk" }
git-object = { version = "^0.17.0", path = "../git-object" }
git-traverse = { version = "^0.12.0", path = "../git-traverse" }
git-diff = { version = "^0.13.0", path = "../git-diff" }
git-tempfile = { version ="^1.0.0", path = "../git-tempfile" }

smallvec = "1.3.0"
memmap2 = "0.5.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
bytesize = "1.0.1"
os_str_bytes = "6.0.0"
parking_lot = { version = "0.11.0", default-features = false }
thiserror = "1.0.26"
uluru = { version = "3.0.0", optional = true }
clru = { version = "0.5.0", optional = true }
dashmap = "5.0.0"

[dev-dependencies]
git-testtools = { path = "../tests/tools"}
git-odb = { path = "../git-odb" }
tempfile = "3.1.0"
bstr = { version = "0.2.13", default-features = false, features = ["std"] }
common_macros = "0.1.1"
