[package]
name = "git-pack"
version = "0.28.0"
repository = "https://github.com/Byron/gitoxide"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT/Apache-2.0"
description = "Implements git packs and related data structures"
edition = "2018"
include = ["src/**/*", "CHANGELOG.md"]

[lib]
doctest = false

[features]

## Provide a fixed-size allocation-free LRU cache for packs. It's useful if caching is desired while keeping the memory footprint
## for the LRU-cache itself low.
pack-cache-lru-static = ["uluru"]
## Provide a hash-map based LRU cache whose eviction is based a memory cap calculated from object data.
pack-cache-lru-dynamic = ["clru"]
## If set, select algorithms may additionally use a full-object cache which is queried before the pack itself.
object-cache-dynamic = ["clru"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["serde", "git-object/serde1"]

internal-testing-git-features-parallel = ["git-features/parallel"]
internal-testing-to-avoid-being-run-by-cargo-test-all = []

[[test]]
name = "multi-threaded"
path = "tests/pack-multi-threaded.rs"
required-features = ["internal-testing-git-features-parallel"]

[[test]]
name = "single-threaded"
path = "tests/pack-single-threaded.rs"
required-features = ["internal-testing-to-avoid-being-run-by-cargo-test-all"]

[dependencies]
git-features = { version = "^0.25.0", path = "../git-features", features = ["crc32", "rustsha1", "progress", "zlib"] }
git-path = { version = "^0.7.0", path = "../git-path" }
git-hash = { version = "^0.10.1", path = "../git-hash" }
git-chunk = { version = "^0.4.0", path = "../git-chunk" }
git-object = { version = "^0.24.0", path = "../git-object" }
git-traverse = { version = "^0.20.0", path = "../git-traverse" }
git-diff = { version = "^0.24.0", path = "../git-diff" }
git-tempfile = { version = "^3.0.0", path = "../git-tempfile" }
git-hashtable = { version = "^0.1.0", path = "../git-hashtable" }

smallvec = "1.3.0"
memmap2 = "0.5.0"
serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
bytesize = "1.0.1"
parking_lot = { version = "0.12.0", default-features = false }
thiserror = "1.0.26"
uluru = { version = "3.0.0", optional = true }
clru = { version = "0.6.1", optional = true }
dashmap = "5.1.0"

document-features = { version = "0.2.0", optional = true }

[dev-dependencies]
git-testtools = { path = "../tests/tools"}
git-odb = { path = "../git-odb" }
tempfile = "3.1.0"
bstr = { version = "1.0.1", default-features = false, features = ["std"] }
maplit = "1.0.2"

[package.metadata.docs.rs]
all-features = true
features = ["document-features", "pack-cache-lru-dynamic", "object-cache-dynamic", "serde1"]
rustdoc-args = ["--cfg", "docsrs"]
