[package]
name = "git-pack"
version = "0.30.2"
repository = "https://github.com/Byron/gitoxide"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
license = "MIT/Apache-2.0"
description = "Implements git packs and related data structures"
edition = "2018"
include = ["src/**/*", "CHANGELOG.md"]
rust-version = "1.64"
autotests = false

[lib]
doctest = false

[features]

## Provide a fixed-size allocation-free LRU cache for packs. It's useful if caching is desired while keeping the memory footprint
## for the LRU-cache itself low.
pack-cache-lru-static = ["dep:uluru"]
## Provide a hash-map based LRU cache whose eviction is based a memory cap calculated from object data.
pack-cache-lru-dynamic = ["dep:clru"]
## If set, select algorithms may additionally use a full-object cache which is queried before the pack itself.
object-cache-dynamic = ["dep:clru"]
## Data structures implement `serde::Serialize` and `serde::Deserialize`.
serde1 = ["dep:serde", "git-object/serde1"]
## Make it possible to compile to the `wasm32-unknown-unknown` target.
wasm = ["git-diff/wasm"]

[dependencies]
git-features = { version = "^0.26.4", path = "../git-features", features = ["crc32", "rustsha1", "progress", "zlib"] }
git-path = { version = "^0.7.1", path = "../git-path" }
git-hash = { version = "^0.10.2", path = "../git-hash" }
git-chunk = { version = "^0.4.1", path = "../git-chunk" }
git-object = { version = "^0.26.1", path = "../git-object" }
git-traverse = { version = "^0.22.1", path = "../git-traverse" }
git-diff = { version = "^0.26.1", path = "../git-diff" }
git-hashtable = { version = "^0.1.1", path = "../git-hashtable" }

memmap2 = "0.5.0"
smallvec = "1.3.0"
bytesize = "1.0.1"
parking_lot = { version = "0.12.0", default-features = false }
thiserror = "1.0.26"
uluru = { version = "3.0.0", optional = true }
clru = { version = "0.6.1", optional = true }

serde = { version = "1.0.114", optional = true, default-features = false, features = ["derive"] }
## If enabled, `cargo doc` will see feature documentation from this manifest.
document-features = { version = "0.2.0", optional = true }
dashmap = "5.1.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
git-tempfile = { version = "^3.0.0", path = "../git-tempfile" }

[dev-dependencies]
git-testtools = { path = "../tests/tools"}

[package.metadata.docs.rs]
all-features = true
features = ["document-features", "pack-cache-lru-dynamic", "object-cache-dynamic", "serde1"]
rustdoc-args = ["--cfg", "docsrs"]
