[package]
name = "git-packetline"
version = "0.7.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A WIP crate of the gitoxide project implementing the pkt-line serialization format"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"
include = ["src/**/*"]

[lib]
doctest = false

[features]
default = []
serde1 = ["serde", "bstr/serde1"]
async-io = ["futures-io", "futures-lite", "pin-project-lite"]
blocking-io = []

[[test]]
name = "async-packetline"
path = "tests/async-packetline.rs"
required-features = ["async-io"]

[[test]]
name = "blocking-packetline"
path = "tests/blocking-packetline.rs"
required-features = ["blocking-io", "maybe-async/is_sync"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", optional = true, default-features = false, features = ["std", "derive"]}
quick-error = "2.0.0"
hex = "0.4.2"
bstr = { version = "0.2.13", default-features = false, features = ["std"] }
# async support
futures-io = { version = "0.3.16", optional = true }
futures-lite = { version  = "1.12.0", optional = true }
pin-project-lite = { version = "0.2.6", optional = true }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
git-odb = { version = "^0.17.0", path = "../git-odb" }
maybe-async = "0.2.6"
