[package]
name = "git-path"
version = "0.7.0"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "A WIP crate of the gitoxide project dealing paths and their conversions"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "CHANGELOG.md"]

[lib]
doctest = false

[dependencies]
bstr = { version = "1.0.1", default-features = false, features = ["std"] }
thiserror = "1.0.26"

[dev-dependencies]
tempfile = "3.3.0"
