[package]
name = "git-path"
version = "0.7.2"
repository = "https://github.com/Byron/gitoxide"
license = "MIT/Apache-2.0"
description = "Please use `gix-<thiscrate>` instead ('git' -> 'gix')"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "CHANGELOG.md"]
rust-version = "1.64"

[lib]
doctest = false

[dependencies]
bstr = { version = "1.0.1", default-features = false, features = ["std"] }
thiserror = "1.0.26"

[dev-dependencies]
tempfile = "3.3.0"
